<resources>
    <string name="title_activity_principal">Principal Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Mexico</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="configuration">Configuration</string>
    <string name="videos">Videos</string>
    <string name="activities">Activities</string>
    <string name="options">Options</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="register_new_user">Register New User</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="user_login">User Login</string>
</resources>
